--- a/Interview Questions/RandomQuestions.ipynb
+++ b/Interview Questions/RandomQuestions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOvQs6RDkAFyTQrP1sMHTc1",
+      "authorship_tag": "ABX9TyNyVOD0lvjZxKFdUUKvF1Po",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "\n",
         "powersofTwo"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -84,7 +84,7 @@
         "\n",
         "powersofTwoBetwXY(3,19)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,6 +94,75 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yLqvFSzsCz6x",
+        "outputId": "5af94032-f01e-437e-fcd2-03911c91ecb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check if numbers/elements in a array can be made equal through multiplication\n",
+        "# Given an array arr[], write a function to feed in the array elements check whether they can all be made equal by only multiplying the numbers by 2 or 7. (you can multiply by these #s as many times as you like) If all elements can be made equal, return False, otherwise return True.\n",
+        "# check for remainder after diving by any power 2 or 7 and see remainder is same in all the elements or not\n",
+        "\n",
+        "# For eg: [50,75,100] - check if they can be made equal by multiplying with 2 or 3\n",
+        "# In this case 50 can be written as 5^2*2, 75 as 5^2*3, 100 as 5^2*2^2. in this case as other that 2 and 3, 5^2=25 is common among the number\n",
+        "# so, they can all be made equal. 50*2^2*3, 75*2^2, 100*3 will all be qual to 300\n",
+        "# For eg: 10,50. they cannot be made equal as by multiplying only using 2 or 3 prime factors as other part i.e 5 & 5^2 are not equal in this case. \n",
+        "# 10=5*2, 50=5^2*2.\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "def get_power_of_p(n, p):\n",
+        "  ans = 0\n",
+        "  while (n % p) == 0:\n",
+        "    ans += 1\n",
+        "    n /= p\n",
+        "  return math.floor(ans)\n",
+        "\n",
+        "def check_if_array_numbers_can_be_made_equal(a):\n",
+        "  n, prev = len(a), 0\n",
+        "  for i in range(n):\n",
+        "    p2 = get_power_of_p(a[i], 2)\n",
+        "    p7 = get_power_of_p(a[i], 7)\n",
+        "    a[i] /= ((2**p2) * (7**p7))\n",
+        "    print(\"Residual = \" + str(a[i]) + \", Power of 2 = \" + str(p2) + \", Power of 7 = \" + str(p7))\n",
+        "    if i > 0:\n",
+        "      if a[i] != prev:\n",
+        "        return \"No\"\n",
+        "    prev = a[i]\n",
+        "  return \"Yes\"\n",
+        "\n",
+        "print(check_if_array_numbers_can_be_made_equal([128, 4, 2]))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Residual = 1.0, Power of 2 = 7, Power of 7 = 0\n",
+            "Residual = 1.0, Power of 2 = 2, Power of 7 = 0\n",
+            "Residual = 1.0, Power of 2 = 1, Power of 7 = 0\n",
+            "Yes\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RSzAhbkMCz3b"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
