--- a/Interview Questions/RandomQuestions.ipynb
+++ b/Interview Questions/RandomQuestions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNyVOD0lvjZxKFdUUKvF1Po",
+      "authorship_tag": "ABX9TyMiBbUe9eNhlwGhAvm3n06p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,11 +98,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yLqvFSzsCz6x",
-        "outputId": "5af94032-f01e-437e-fcd2-03911c91ecb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yLqvFSzsCz6x",
+        "outputId": "5af94032-f01e-437e-fcd2-03911c91ecb3"
       },
       "source": [
         "# Check if numbers/elements in a array can be made equal through multiplication\n",
@@ -156,13 +156,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RSzAhbkMCz3b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RSzAhbkMCz3b",
+        "outputId": "b585b947-be4d-4a47-8114-72a2db07a908"
       },
       "source": [
-        ""
+        "# Create a Python function that generates the power set given a set of values. For example, if you're given the following set:\n",
+        "# set = {1, 2, 3} Your python function should return the corresponding power set:\n",
+        "# power set = { {}, {1}, {2}, {3}, {1, 2}, {2, 3}, {1, 3}, {1, 2, 3} }\n",
+        "\n",
+        "# A power set will 2^n elements. n is the length of n\n",
+        "# so create binary values for 0 to 2^n and extract elements from set based on index position of 1 in binary representation\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "def get_power_set(a):\n",
+        "    n = len(a)\n",
+        "    x = 2**n\n",
+        "    ans = []\n",
+        "    for i in range(x):\n",
+        "        l = []\n",
+        "        index = 0\n",
+        "        while i > 0:\n",
+        "            if (i % 2) == 1:\n",
+        "                l.append(a[index])\n",
+        "            i >>= 1\n",
+        "            index += 1\n",
+        "        ans.append(l)\n",
+        "    return sorted(ans, key = len)\n",
+        "\n",
+        "print(get_power_set([1, 2, 3]))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[], [1], [2], [3], [1, 2], [1, 3], [2, 3], [1, 2, 3]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
