--- a/Interview Questions/RandomQuestions.ipynb
+++ b/Interview Questions/RandomQuestions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMiBbUe9eNhlwGhAvm3n06p",
+      "authorship_tag": "ABX9TyP/Tu7rVeVlaDAzRZAmtw2O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,7 +139,7 @@
         "\n",
         "print(check_if_array_numbers_can_be_made_equal([128, 4, 2]))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
         "\n",
         "print(get_power_set([1, 2, 3]))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,6 +199,33 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pHrhnX_5GABC"
+      },
+      "source": [
+        "# There's a staircase with N steps, and you can climb 1 or 2 steps at a time. Given N, write a function that returns the number of unique ways you can climb the staircase. The order of the steps matters.\n",
+        "# For example, if N is 4, then there are 5 unique ways:\n",
+        "# 1, 1, 1, 1\n",
+        "# 2, 1, 1\n",
+        "# 1, 2, 1\n",
+        "# 1, 1, 2\n",
+        "# 2, 2\n",
+        "# What if, instead of being able to climb 1 or 2 steps at a time, you could climb any number from a set of positive integers X? For example, if X = {1, 3, 5}, you could climb 1, 3, or 5 steps at a time. Generalize your function to take in X.\n",
+        "\n",
+        "# Logic\n",
+        "# N is written as p(a)+q(b) where a=1, b=2\n",
+        "# for p in (0,N/a):\n",
+        "#   calculate q \n",
+        "#   Extract only integers from q\n",
+        "#   Now calculate p based on values from q\n",
+        "# For each unique combination of (p,q) there will p+q positions for which (a,b) are to be selected\n",
+        " "
+      ],
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
