--- a/Interview Questions/Python_Refresher.ipynb
+++ b/Interview Questions/Python_Refresher.ipynb
@@ -25,6 +25,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yzhmL_YuUM0B"
+      },
+      "source": [
+        "While loops: https://www.w3schools.com/python/python_while_loops.asp\r\n",
+        "\r\n",
+        "For loops: https://www.w3schools.com/python/python_for_loops.asp"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "DD2B6a7zj7Cy"
