--- a/Interview Questions/Python_Refresher.ipynb
+++ b/Interview Questions/Python_Refresher.ipynb
@@ -170,7 +170,7 @@
         "\r\n",
         "print(newlist)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
         "else:\r\n",
         "  print(\"i is no longer less than 6\")"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
         "for x in range(2, 30, 3):\r\n",
         "  print(x)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +383,7 @@
         "for key, value in enumerate(['Geeks', 'for', 'Geeks', 'is', 'the', 'Best', 'Coding', 'Platform']): \r\n",
         "    print(value, end=' ') "
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
         "for question, answer in zip(questions, answers): \r\n",
         "    print('What is your {0}?  I am {1}.'.format(question, answer)) "
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +448,7 @@
         "for i,j in d.items(): \r\n",
         "    print(i,j)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +493,7 @@
         "# with keyword arguments \r\n",
         "print(Counter(A=3, B=5, C=2)) "
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
         "for key, value in d.items(): \r\n",
         "    print(key, value) "
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +576,7 @@
         "for key, value in od.items(): \r\n",
         "    print(key, value) "
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +633,7 @@
         "for key, value in od.items(): \r\n",
         "    print(key, value) "
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -695,7 +695,7 @@
         "print (\"All values of ChainMap are : \") \r\n",
         "print (list(chain.values())) "
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -726,7 +726,7 @@
         "\r\n",
         "print(reversed(chain.maps))"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,11 +742,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 135
+          "base_uri": "https://localhost:8080/"
         },
         "id": "f8L6BIptfS-p",
-        "outputId": "753838cb-bbe8-4090-b8c7-f5a55d48a33a"
+        "outputId": "2b7beedf-6f16-43d2-ee82-09dcc27ef043"
       },
       "source": [
         "# Deque: Deque (Doubly Ended Queue) in Python is implemented using the module “collections“.\r\n",
@@ -799,15 +798,22 @@
         "print (\"The deque after deleting from left is : \") \r\n",
         "print (de) \r\n"
       ],
-      "execution_count": 40,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-7691fcedbd4b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    rom collections import deque\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "deque(['name', 'age', 'DOB'])\n",
+            "The deque after appending at right is : \n",
+            "deque([1, 2, 3, 4])\n",
+            "The deque after appending at left is : \n",
+            "deque([6, 1, 2, 3, 4])\n",
+            "The deque after deleting from right is : \n",
+            "deque([6, 1, 2, 3])\n",
+            "The deque after deleting from left is : \n",
+            "deque([1, 2, 3])\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -852,7 +858,7 @@
         "print (\"The deque after deleting first occurrence of 3 is : \") \r\n",
         "print (de) "
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,7 +972,7 @@
         "print (\"The popped and smallest element is : \",end=\"\") \r\n",
         "print (heapq.heappop(li)) "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1069,7 @@
         "  print(\"The youngest child is \" + kids[2])\r\n",
         "my_function(\"Emil\", \"Tobias\", \"Linus\")"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1090,7 +1096,7 @@
         "  print(\"His last name is \" + kid[\"lname\"])\r\n",
         "my_function(fname = \"Tobias\", lname = \"Refsnes\")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1152,7 +1158,7 @@
         "x = lambda a, b : a * b\r\n",
         "print(x(5, 6))"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1173,7 +1179,7 @@
         "print(mydoubler(11))\r\n",
         "print(myfunc(2))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1256,7 +1262,7 @@
         "thisdict.popitem() # Removes the last inserted item\r\n",
         "print(thisdict)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1288,7 +1294,7 @@
         "for x in thisdict:\r\n",
         "  print(thisdict[x])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1314,7 +1320,7 @@
         "for x in thisdict.values():\r\n",
         "  print(x)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1340,7 +1346,7 @@
         "for x in thisdict.keys():\r\n",
         "  print(x)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1366,7 +1372,7 @@
         "for x, y in thisdict.items():\r\n",
         "  print(x, y)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1406,7 +1412,7 @@
         "print(myfamily[\"child1\"]['year'])\r\n",
         "print(myfamily[\"child1\"])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1431,7 +1437,7 @@
         "List = ['G','E','E','K','S','F', 'O','R','G','E','E','K','S']\r\n",
         "print(\"\\nPrinting List in reverse: \",List[::-1]) "
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1485,7 +1491,7 @@
         "print(\"concatenate 2 strings: \",\"Geeks\"+\"For\")\r\n",
         "print(\"Repeat the String: \",\"Geeks\"*4)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1538,7 +1544,7 @@
         "print(\"Pascal Case:Each word starts with a capital letter:\",\"MyVariableName\")\r\n",
         "print(\"Snake Case:Each word is separated by an underscore character:\",\"my_variable_name\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
