--- a/Algorithms_and_Data_Structures_in_Python.ipynb
+++ b/Algorithms_and_Data_Structures_in_Python.ipynb
@@ -6,21 +6,11 @@
       "name": "Algorithms and Data Structures in Python.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "0J1-wKOWbDJA",
-        "LpS99hhr2a6F",
-        "7gOKA1UeEnfC",
-        "lPsfRgq05CjZ",
-        "2rAFKCggEJKA",
-        "L9KoTPVvyzRQ",
         "sx4S6NoT0UeL",
-        "fwuVUaRj1tkQ",
-        "TgTGd_DXcLxT",
-        "7H6nnpNx9X5W",
         "JaiTotpDj3Og",
-        "vfhtRFoxd7oo",
         "vFxOpp-qmjB1"
       ],
-      "authorship_tag": "ABX9TyMv45rbGPe5S0/9a35FZpSY",
+      "authorship_tag": "ABX9TyMzOe83CloCzMrmjBNxHMfJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +49,7 @@
         "id": "LnJ6Hp6fj7vu"
       },
       "source": [
-        "Algorithms running time. Here is log to the base 2\r\n",
+        "Algorithms running time. Here log is to the base 2\r\n",
         "* O(1): \r\n",
         "i) Swapping 2 numbers\r\n",
         "ii) Deciding whether a number is odd or even \r\n",
@@ -119,7 +109,7 @@
         "l1 = [10.0,3,'Sam',5]\r\n",
         "print(l1)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +138,7 @@
         "  l2.append(i) ###\r\n",
         "print(l2)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,6 +162,35 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p3UdLDn-zEGO",
+        "outputId": "7c9fc2ee-2408-4064-f0d7-a018461ab6fc"
+      },
+      "source": [
+        "l1 = [1,2,3,4,5]\r\n",
+        "l1.pop() # return the last item"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "BHHaL8qka6bZ",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -187,7 +206,7 @@
         "  l2.insert(0,i) ### 0 here is the index\r\n",
         "print(l2)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +224,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ljd_YJ9M6uLA",
-        "outputId": "83b21050-427f-4677-c21e-f99fecf9a447"
+        "outputId": "684c7a82-9a59-46c3-cda9-01126394bb44"
       },
       "source": [
         "# Keep first constant but adding new item at index=1 of the array\r\n",
@@ -216,12 +235,119 @@
         "  l2.insert(1,i) ### 1 is the index\r\n",
         "print(l2)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[1, 5, 4, 3, 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QEVGoteD0avB",
+        "outputId": "88590b00-0449-436c-9078-d8fa556e00ef"
+      },
+      "source": [
+        "for i in range(0,5):\r\n",
+        "  print(i)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "msGGIiKj3SMb",
+        "outputId": "c736e374-539f-44dc-d7c5-398be0e33931"
+      },
+      "source": [
+        "for i in range(1,5):\r\n",
+        "  print(i)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FqQK7zf53ZZp",
+        "outputId": "b63401f7-4b74-48d5-8233-39c3b7ae72ff"
+      },
+      "source": [
+        "x = range(3, 5, 1)\r\n",
+        "for n in x:\r\n",
+        "  print(n)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OQ7feC4b4mr3",
+        "outputId": "4c199db6-05b2-46c4-f5fd-4eab15ec97aa"
+      },
+      "source": [
+        "x = range(3, 7, 2)\r\n",
+        "for n in x:\r\n",
+        "  print(n)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "5\n"
           ],
           "name": "stdout"
         }
@@ -252,7 +378,7 @@
         "l1[2] = 'Sam'\r\n",
         "print(\"Items in the array when index 2 is replaced:\",l1)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +415,7 @@
         "    max=i\r\n",
         "print(max)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +444,7 @@
         "    min=i\r\n",
         "print(min)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,7 +535,7 @@
         "p1 = MyClass()\r\n",
         "print(p1.x)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +566,7 @@
         "print(p1.name)\r\n",
         "print(p1.age)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +599,7 @@
         "p1 = Person(\"John\", 36)\r\n",
         "p1.myfunc()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +631,7 @@
         "p1 = Person(\"John\", 36)\r\n",
         "p1.myfunc()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,7 +655,7 @@
         "del p1.age\r\n",
         "del p1"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -641,7 +767,7 @@
         "\r\n",
         "print(linkedlist.size1());"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,7 +878,7 @@
         "print(stack.sizeStack())\r\n",
         "print(stack.isEmpty())"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +960,7 @@
         "print(\"Dequeue: \", queue.dequeue())\r\n",
         "print(queue.sizeQueue())"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,14 +1059,14 @@
         "    # O(logN) BUT if the tree is balances (left subtree contains app. same amount of item then right subtree)\r\n",
         "    def insert_node(self, data, node):\r\n",
         "\r\n",
-        "        # we have to go to the left subtree\r\n",
-        "        if data < node.data:\r\n",
-        "            if node.leftChild:\r\n",
-        "                self.insert_node(data, node.leftChild)\r\n",
-        "            else:\r\n",
-        "                node.leftChild = Node(data, node)\r\n",
+        "        # we have to go to the left subtree recursively\r\n",
+        "        if data < node.data: # If data is less than node\r\n",
+        "            if node.leftChild: # if left child is not empty\r\n",
+        "                self.insert_node(data, node.leftChild) # repeat the above procedure\r\n",
+        "            else: # if left child is empty\r\n",
+        "                node.leftChild = Node(data, node) # insert data as left child\r\n",
         "        # we have to visit the right subtree\r\n",
-        "        else:\r\n",
+        "        else: # If data is greater than or equal to the node\r\n",
         "            if node.rightChild:\r\n",
         "                self.insert_node(data, node.rightChild)\r\n",
         "            else:\r\n",
@@ -1033,7 +1159,7 @@
         "        if self.root:\r\n",
         "            return self.get_max(self.root)\r\n",
         "\r\n",
-        "    def get_max(self, node):\r\n",
+        "    def get_max(self, node): # max node is the right most node that doen't have a child\r\n",
         "\r\n",
         "        actual = self.root\r\n",
         "\r\n",
@@ -1042,7 +1168,8 @@
         "\r\n",
         "        return actual.data\r\n",
         "\r\n",
-        "    def get_min_value(self):\r\n",
+        "    def get_min_value(self): # min node is the left most node that doen't have a child\r\n",
+        "\r\n",
         "        if self.root:\r\n",
         "            return self.get_min(self.root)\r\n",
         "\r\n",
@@ -1076,7 +1203,7 @@
         "\r\n",
         "bst.traverse()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1384,7 +1511,7 @@
         "\r\n",
         "rbt.traverse()\r\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1579,7 +1706,7 @@
         "\t\r\n",
         "\theap.heapsort()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1653,7 +1780,7 @@
         "heapify(nums) #To create array representation of heap structure\r\n",
         "print(nums)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1793,7 +1920,7 @@
         "\t\r\n",
         "\tprint(table.get(\"car\"))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1826,7 +1953,7 @@
         "print(dict.keys())\r\n",
         "print(dict.values()) # it will not be printed in the same order as keys (order is not maintained)\r\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1958,7 +2085,7 @@
         "\t\r\n",
         "\tprint( tst.get(\"orange\") )"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2058,7 +2185,7 @@
         "bfs = BreadthFirstSearch();\r\n",
         "bfs.bfs(node1);"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2117,7 +2244,7 @@
         "dfs = DepthFirstSearch();\r\n",
         "dfs.dfs(node1);"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2192,7 +2319,7 @@
         "      swap(nums, j, j+1)\r\n",
         "    print(nums)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2241,7 +2368,7 @@
         "   a = [0,0,0,-1,-0,1,2,3,2,1]\r\n",
         "   print(bubble_sort(a))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2287,7 +2414,7 @@
         "   a = [0,0,0,-1,-0,1,2,3,2,1]\r\n",
         "   print(selection_sort(a))"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2327,7 +2454,7 @@
         "    \r\n",
         "  print(nums)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2376,7 +2503,7 @@
         "   nums = [-1,4,5,2,-2,0,1,2,3,2,1,0,1,2,3]\r\n",
         "   print(selection_sort(nums))"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2423,7 +2550,7 @@
         "\r\n",
         "  print(nums) "
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2470,7 +2597,7 @@
         "   nums = [5,4,3,2,1]\r\n",
         "   print(insertion_sort(nums))"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2542,7 +2669,7 @@
         "   quick_sort(nums,0,len(nums)-1)\r\n",
         "   print(nums)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2625,7 +2752,7 @@
         "   merge_sort(nums)\r\n",
         "   print(nums)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
